# django-architecture-patterns

./: README.md  pyproject.toml
src/: pytest.ini
src/domain/work_action/: models.py  repositories.py  services.py
src/domain/work_management/: models.py  services.py
src/task_manager/core/: repositories.py  services.py  signals.py  test_services.py  test_views.py  tests.py  urls.py  views.py
src/task_manager/core/domain/: scheduling.py
src/task_manager/executors/: apps.py  models.py
src/task_manager/executors/migrations/: 0001_initial.py
src/task_manager/notifications/: models.py
src/task_manager/notifications/migrations/: 0001_initial.py
src/task_manager/profiles/: models.py
src/task_manager/profiles/migrations/: 0001_initial.py
src/task_manager/task_manager/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/task_manager/tasks/: assignment_fixture.json  dto.py  models.py  repositories.py  services.py  signal_receivers.py  signals.py  test_dto.py  test_repositories.py  test_signals.py  tests.py  urls.py  views.py
src/task_manager/tasks/domain/: crud.py  task.py
src/task_manager/tasks/migrations/: 0001_initial.py  0002_task_assignee.py
src/tests/: repositories.py
src/tests/domain_tests/: test_work_action.py  test_work_management.py
src/web/core/: models.py
src/web/core/migrations/: 0001_initial.py
src/web/web/: settings.py  urls.py
src/web/work_action/: apps.py  repositories.py  tests.py
