[project]
name = "django-architecture-patterns"
version = "0.1.0"
description = "Example projects from the book Django Architecture Patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0a1",
    "pydantic>=2.11.10",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=8.4.2",
    "pyinstrument>=5.1.1",
    "pydeps>=3.0.1",
]
